Update Tanzaku Schema
