# docs/openapi.yaml
@@ -234,7 +234,7 @@ paths:
       security:
         - bearerAuth: []
 
-  /tanzaku/{projectId}/new:
+  /tanzaku/{id}:
     post:
       operationId: newTanzaku
       tags:
@@ -242,7 +242,7 @@ paths:
       summary: New Tanzaku
       description: Create a new Tanzaku
       parameters:
-        - name: projectId
+        - name: id
           in: path
           required: true
           description: ID of the project to get
@@ -269,35 +269,6 @@ paths:
                 $ref: '#/components/schemas/Error500'
       security:
         - bearerAuth: []
-  /tanzaku/{projectId}/list:
-    get:
-      operationId: getTanzaku
-      tags:
-        - Tanzaku
-      summary: Get Tanzaku
-      description: Get a tanzaku by project ID
-      parameters:
-        - name: projectId
-          in: path
-          required: true
-          description: ID of the project to get
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Project found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TanzakuSchemaArray'
-        '500':
-          description: Internal Server Error
-          content:
-            text/plain:
-              schema:
-                $ref: '#/components/schemas/Error500'
-
-  /tanzaku/{projectId}/show:
     get:
       operationId: getTanzakuPicked
       tags:
@@ -305,7 +276,7 @@ paths:
       summary: Get Tanzaku
       description: 短冊を１０個古い順に取ってくるやつ
       parameters:
-        - name: projectId
+        - name: id
           in: path
           required: true
           description: ID of the project to get
@@ -324,16 +295,42 @@ paths:
             text/plain:
               schema:
                 $ref: '#/components/schemas/Error500'
-
-  /tanzaku/del/{tanzakuId}:
+    patch:
+      operationId: reviveTanzaku
+      tags:
+        - Tanzaku
+      summary: Revive a Tanzaku
+      description: Revive a Tanzaku
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the tanzaku to delete
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Project found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TanzakuResponseSchema'
+        '500':
+          description: Internal Server Error
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/Error500'
+      security:
+        - bearerAuth: []
     delete:
       operationId: deleteTanzaku
       tags:
         - Tanzaku
-      summary: New Tanzaku
-      description: Create a new Tanzaku
+      summary: Delete Tanzaku
+      description: Delete a Tanzaku
       parameters:
-        - name: tanzakuId
+        - name: id
           in: path
           required: true
           description: ID of the tanzaku to delete
